[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/LevelMap.gd" type="Script" id=1]
[ext_resource path="res://images/icons/cards_stack_high.png" type="Texture" id=2]
[ext_resource path="res://Utilities/GameClock.tscn" type="PackedScene" id=3]
[ext_resource path="res://Utilities/StoryTeller.tscn" type="PackedScene" id=4]

[node name="Node" type="Node"]

[node name="LevelMap" type="Node2D" parent="."]
pause_mode = 2
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="LevelMap"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -107669.0
margin_top = -76394.0
margin_right = -103669.0
margin_bottom = -72394.0
rect_scale = Vector2( 221.727, 63.3197 )
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="DeckButtonAnchor" type="Node2D" parent="LevelMap"]
pause_mode = 2
z_index = 100

[node name="Button" type="Button" parent="LevelMap/DeckButtonAnchor"]
margin_left = 1.99999
margin_top = 137.0
margin_right = 142.0
margin_bottom = 271.0
rect_scale = Vector2( 0.308676, 0.330686 )
icon = ExtResource( 2 )

[node name="GameClock" parent="LevelMap/DeckButtonAnchor" instance=ExtResource( 3 )]
position = Vector2( 16, 198 )

[node name="StoryTeller" parent="LevelMap/DeckButtonAnchor" instance=ExtResource( 4 )]

[node name="Container" type="Container" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" type="Control" parent="Container"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1200.0
margin_bottom = 800.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Label" type="Label" parent="Container/Control"]
margin_left = 291.0
margin_top = -970.0
margin_right = 362.0
margin_bottom = -956.0
rect_scale = Vector2( 7.43749, 20.4236 )
text = "TESTY LABEL"

[node name="Label2" type="Label" parent="Container/Control"]
margin_left = 208.0
margin_top = 280.0
margin_right = 1039.0
margin_bottom = 707.0
rect_scale = Vector2( 18.8, 8.15344 )
text = "OTHER
LABEL"

[connection signal="pressed" from="LevelMap/DeckButtonAnchor/Button" to="LevelMap" method="_on_Button_pressed"]
